--- a/index.html
+++ b/index.html
@@ -1,2 +1,31 @@
-<!doctype html><meta charset="utf-8"><title>OK</title>
-<h1>GitHub Pages работает</h1>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Аудиоуроки</title>
+  <style>
+    body { font-family: sans-serif; text-align: center; background: #fafafa; padding: 40px; }
+    h1 { color: #333; }
+    .track { margin: 20px 0; }
+    audio { width: 90%; max-width: 600px; }
+  </style>
+</head>
+<body>
+  <h1>Аудиоуроки по русскому языку</h1>
+
+  <div class="track">
+    <h3>Урок 1</h3>
+    <audio controls>
+      <source src="lesson1.mp3" type="audio/mpeg">
+    </audio>
+  </div>
+
+  <div class="track">
+    <h3>Урок 2</h3>
+    <audio controls>
+      <source src="lesson2.mp3" type="audio/mpeg">
+    </audio>
+  </div>
+
+</body>
+</html>
