--- a/index.html
+++ b/index.html
@@ -2,30 +2,65 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Аудиоуроки</title>
+  <title>Lesson 1 – Audio Course</title>
   <style>
-    body { font-family: sans-serif; text-align: center; background: #fafafa; padding: 40px; }
-    h1 { color: #333; }
-    .track { margin: 20px 0; }
-    audio { width: 90%; max-width: 600px; }
+    body {
+      font-family: sans-serif;
+      background: #fafafa;
+      text-align: center;
+      padding: 40px;
+      color: #222;
+    }
+    h1 {
+      margin-bottom: 40px;
+    }
+    .track {
+      margin: 25px auto;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      padding: 20px;
+      width: 90%;
+      max-width: 600px;
+    }
+    h3 {
+      margin-top: 0;
+    }
+    audio {
+      width: 100%;
+      outline: none;
+    }
   </style>
 </head>
 <body>
-  <h1>Аудиоуроки по русскому языку</h1>
+  <h1>Lesson 1 – Audio Materials</h1>
 
   <div class="track">
-    <h3>Урок 1</h3>
+    <h3>Lesson 1. Words (reading)</h3>
     <audio controls>
-      <source src="lesson1.mp3" type="audio/mpeg">
+      <source src="Lesson 1. Words (reading).mp3" type="audio/mpeg">
+      Ваш браузер не поддерживает аудио.
     </audio>
   </div>
 
   <div class="track">
-    <h3>Урок 2</h3>
+    <h3>Lesson 1. Audio 1 (page 3)</h3>
     <audio controls>
-      <source src="lesson2.mp3" type="audio/mpeg">
+      <source src="Lesson 1. audio 1(page 3).mp3" type="audio/mpeg">
+      Ваш браузер не поддерживает аудио.
     </audio>
   </div>
 
+  <div class="track">
+    <h3>Lesson 1. Audio 2 (page 9)</h3>
+    <audio controls>
+      <source src="Lesson 1. audio 2 (page 9).mp3" type="audio/mpeg">
+      Ваш браузер не поддерживает аудио.
+    </audio>
+  </div>
+
+  <p style="margin-top: 50px; font-size: 14px; color: #666;">
+    © Reading Course | GitHub Pages
+  </p>
 </body>
 </html>
