--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
   </style>
 </head>
 <body>
-  <h1>Lesson 1 – Audio Materials</h1>
+  <h1>Reading course</h1>
 
   <div class="track">
     <h3>Lesson 1. Words (reading)</h3>
     <audio controls>
-      <source src="Lesson 1. Words (reading).mp3" type="audio/mpeg">
+      <source src="lesson1-words-reading.mp3" type="audio/mpeg">
       Ваш браузер не поддерживает аудио.
     </audio>
   </div>
@@ -46,7 +46,7 @@
   <div class="track">
     <h3>Lesson 1. Audio 1 (page 3)</h3>
     <audio controls>
-      <source src="Lesson 1. audio 1(page 3).mp3" type="audio/mpeg">
+      <source src="lesson1-audio1-page3.mp3" type="audio/mpeg">
       Ваш браузер не поддерживает аудио.
     </audio>
   </div>
@@ -54,7 +54,7 @@
   <div class="track">
     <h3>Lesson 1. Audio 2 (page 9)</h3>
     <audio controls>
-      <source src="Lesson 1. audio 2 (page 9).mp3" type="audio/mpeg">
+      <source src="lesson1-audio2-page9.mp3" type="audio/mpeg">
       Ваш браузер не поддерживает аудио.
     </audio>
   </div>
