--- a/index.html
+++ b/index.html
@@ -30,33 +30,55 @@
       width: 100%;
       outline: none;
     }
+    a.file-link {
+      display: inline-block;
+      margin-top: 10px;
+      font-size: 14px;
+      color: #0066cc;
+      text-decoration: none;
+    }
+    a.file-link:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
-  <h1>Reading course</h1>
+  <h1>Lesson 1 – Audio Materials</h1>
 
   <div class="track">
     <h3>Lesson 1. Words (reading)</h3>
-    <audio controls>
+    <audio controls preload="none">
       <source src="lesson1-words-reading.mp3" type="audio/mpeg">
       Ваш браузер не поддерживает аудио.
     </audio>
+    <br>
+    <a class="file-link" href="https://artmarusya.github.io/reading-course/lesson1-words-reading.mp3" target="_blank">
+      🔗 Открыть или скопировать прямую ссылку
+    </a>
   </div>
 
   <div class="track">
     <h3>Lesson 1. Audio 1 (page 3)</h3>
-    <audio controls>
+    <audio controls preload="none">
       <source src="lesson1-audio1-page3.mp3" type="audio/mpeg">
       Ваш браузер не поддерживает аудио.
     </audio>
+    <br>
+    <a class="file-link" href="https://artmarusya.github.io/reading-course/lesson1-audio1-page3.mp3" target="_blank">
+      🔗 Открыть или скопировать прямую ссылку
+    </a>
   </div>
 
   <div class="track">
     <h3>Lesson 1. Audio 2 (page 9)</h3>
-    <audio controls>
+    <audio controls preload="none">
       <source src="lesson1-audio2-page9.mp3" type="audio/mpeg">
       Ваш браузер не поддерживает аудио.
     </audio>
+    <br>
+    <a class="file-link" href="https://artmarusya.github.io/reading-course/lesson1-audio2-page9.mp3" target="_blank">
+      🔗 Открыть или скопировать прямую ссылку
+    </a>
   </div>
 
   <p style="margin-top: 50px; font-size: 14px; color: #666;">
