--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Lesson 1 – Audio Course</title>
+  <title>Reading course</title>
   <style>
     body {
       font-family: sans-serif;
