--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </style>
 </head>
 <body>
-  <h1>Lesson 1 – Audio Materials</h1>
+  <h1>Reading course</h1>
 
   <div class="track">
     <h3>Lesson 1. Words (reading)</h3>
